infrastructure/controllers/nexus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus
  namespace: nexus
  labels:
    app: nexus
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8081
      protocol: TCP
      name: web
    - port: 8082
      targetPort: 8082
      protocol: TCP
      name: docker-hosted
    - port: 8083
      targetPort: 8083
      protocol: TCP
      name: docker-proxy
  selector:
    app: nexus
